NMA | Subida Produccion
dfgsdfsdfsdf

--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -173,10 +173,10 @@
               </tbody>
             </table>
             </div>
-
+            <!-- Seccion de Boton de Salida -->
+            <button type="button" id="closeModalFinCom" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
   			</div>
   			<!-- <div class="modal-footer">
-  				<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
   			</div> -->
   		</div><!-- /.modal-content -->
   	</div><!-- /.modal-dialog -->
