--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -62,8 +62,8 @@
             <ul *ngIf="identity" class="nav navbar-nav navbar-right" id="credentials-top">
               <li>
                 <a class="user-image" >
-                  <img src="http://localhost/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">
-                  <!-- <img src="http://192.168.0.15/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">           -->
+                  <!-- <img src="http://localhost/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt=""> -->
+                  <img src="http://172.17.4.162/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">          
                 </a>
               </li>
               <li class="nav-item dropdown">
