--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -255,7 +255,7 @@
         </tbody>
       </table>
 
-      <button class="btn btn-primary" data-toggle="modal" data-target="#reportModal">Launch demo modal</button>
+      <!-- <button class="btn btn-primary" data-toggle="modal" data-target="#reportModal">Launch demo modal</button> -->
 
       <div id="reportModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
