--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -200,8 +200,8 @@
 
             <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
             <!-- <button type="reset" class="btn btn-primary">Limpiar</button> -->
-            <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" >Guardar</button>
-            <button type="button" id="closeModalFinCom" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+            <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" style="cursor: pointer">Guardar</button>
+            <button type="button" id="closeModalFinCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
         </form>
     </div>
       <div class="modal-footer">
@@ -258,8 +258,8 @@
                 <hr class="colorgraph">
                 <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
                 <!-- <button type="button" class="btn btn-primary">Limpiar</button> -->
-                <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" >Guardar</button>
-                <button type="button" id="closeModalComResp" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+                <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" style="cursor: pointer">Guardar</button>
+                <button type="button" id="closeModalComResp" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
             </form>
         </div>
           <div class="modal-footer">
@@ -316,8 +316,8 @@
             <hr class="colorgraph">
             <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
             <!-- <button type="button" class="btn btn-primary">Limpiar</button> -->
-            <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" >Guardar</button>
-            <button type="button" id="closeModalAgreCom" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+            <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" style="cursor: pointer">Guardar</button>
+            <button type="button" id="closeModalAgreCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
         </form>
     </div>
       <div class="modal-footer">
