--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -339,7 +339,7 @@
 
           </div>
       </div>
-      <hr>
+      <!-- <hr> -->
 			<!-- <div class="row">
 				<div class="col-xs-8 col-sm-9 col-md-9">
 					 Para saber mas de utilidad de esta aplicacion, verifica los <a href="#" data-toggle="modal" data-target="#t_and_c_m"> manuales de usuario </a> que tiene este sistema.
@@ -360,7 +360,7 @@
 			</div>
 		</form>
 	</div>
-
+<!-- <hr> -->
   <!-- Columna del formulario -->
 
   <!-- Columna para mostrar los Datos relalevantes de los Ingresos de Comunicaciones -->
@@ -369,12 +369,31 @@
       <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
       <div class="card-block" style="margin-left:8px">
         <h4 class="card-title">Resumen</h4>
-        <p class="card-text">Resumen de la informacion registrada de los Oficios.</p>
+        <p class="card-text">Resumen de la informacion registrada de las Comunicaniones.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li>
-        <li class="list-group-item"> <i class="material-icons">assignment_late</i> Oficios Pendientes -- <span class="badge badge-pill badge-warning"> {{ countOficiosPendientes }} </span> </li>
-        <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Oficios Finalizados -- <span class="badge badge-pill badge-danger"> {{ countOficiosFinalizados }} </span> </li>
+
+        <!-- Oficios -->
+        <!-- <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li> -->
+        <li class="list-group-item"> <i class="material-icons">assignment_late</i> Oficios Pendientes --- | <span class="badge badge-pill badge-warning"> {{ countOficiosPendientes }} </span> </li>
+        <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Oficios Finalizados -- | <span class="badge badge-pill badge-primary"> {{ countOficiosFinalizados }} </span> </li>
+
+        <!-- Memoramdums -->
+        <!-- <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li> -->
+        <li class="list-group-item"> <i class="material-icons">assignment_late</i> Memos Pendientes --- | <span class="badge badge-pill badge-warning"> {{ countMemosPendientes }} </span> </li>
+        <li class="list-group-item"> <i class="material-icons">assignment_turned_in</i> Memos Finalizados -- | <span class="badge badge-pill badge-primary"> {{ countMemosFinalizados }} </span> </li>
+
+        <!-- Correos -->
+        <!-- <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li> -->
+        <li class="list-group-item"> <i class="material-icons">markunread_mailbox</i> Correos Pendientes --- | <span class="badge badge-pill badge-warning"> {{ countCorreosPendientes }} </span> </li>
+        <li class="list-group-item"> <i class="material-icons">contact_mail</i> Correos Finalizados -- | <span class="badge badge-pill badge-primary"> {{ countCorreosFinalizados }} </span> </li>
+
+        <!-- Llamadas -->
+        <!-- <li class="list-group-item"> <i class="material-icons">assignment</i> Oficios Ingresados -- <span class="badge badge-pill badge-primary"> {{ countOficiosIngresados }}  </span> </li> -->
+        <li class="list-group-item"> <i class="material-icons">call</i> Llamadas Pendientes -- | <span class="badge badge-pill badge-warning"> {{ countLlamadasPendientes }} </span> </li>
+        <li class="list-group-item"> <i class="material-icons">call_end</i> Llamadas Finalizadas -- | <span class="badge badge-pill badge-primary"> {{ countLlamadasFinalizados }} </span> </li>
+
+
       </ul>
         <!-- <div class="card-block" style="margin-left:8px">
           <a href="#" class="card-link">Ver tablero</a>
@@ -388,6 +407,7 @@
  Columna de las Tarjetas -->
 
 </div>
+
 <!-- Modal -->
 <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
@@ -411,4 +431,4 @@
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<hr>
+<!-- <hr> -->
