--- a/symfony/app/Resources/views/Emails/sendMail.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMail.html.twig
@@ -135,9 +135,15 @@
             </table>
 
             <br>
-            <h4> Saludos cordiales </h4>
+            <h4> 
+                Saludos Cordiales.
 
-            <img src="secretaria_exterior.png" alt="SRECI" height="142" width="142">
+                Nahúm Aaron Martínez Salgado
+                Administrador de la Plataforma de Gestión de la Cooperación (PGC)
+                Dirección de Cooperación Privada al Desarrollo
+                Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
+            </h4>
+            <img src="./secretaria_exterior.png" alt="SRECI" height="142" width="142">
         </div>
     </div>
 </body>
