--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -123,22 +123,22 @@
       </div>
 
             <table id="example" class="table table-striped table-bordered"
-                cellspacing="0" style="font-size:15px;" *ngIf="loadTabla1 == true">
+                cellspacing="0" width="100%" style="font-size:15px;" *ngIf="loadTabla1 == true">
               <!-- Loader de Carga de los Datos -->
               <!-- <div id="loader-2" *ngIf="loading_tableIn == 'show' " style="margin-left:350px; margin-top:120px;">
                 <img src="assets/images/30.gif" alt="Cargando Tareas">
               </div> -->
               <thead>
                   <tr>
-                      <th>No. Interno</th>
-                      <th>No. Referencia</th>
-                      <th>Tipo Comunicacion</th>
-                      <th>Fecha Creacion</th>
+                      <th>Código Interno</th>
+                      <th>Código Referencia</th>
+                      <th>Tipo Comunicación</th>
+                      <th>Fecha Creación</th>
                       <th>Fecha Entrega.</th>
-                      <th>Institucion</th>
-                      <th>Descripcion</th>
-                      <th>Tema</th>
-                      <th>Estado</th>
+                      <th>Institución Remitente</th>
+                      <th>Descripción de Comunicación</th>
+                      <th>Tema de Comunicación</th>
+                      <th>Estado de Comunicación</th>
                       <th>Ver</th>
                   </tr>
               </thead>
@@ -157,7 +157,7 @@
                                       'text-primary': item.idEstado.idEstado == 5,
                                       'text-success': item.idEstado.idEstado == 7,
                                        'text-info': item.idEstado.idEstado == 8 }"
-                        data-toggle="tooltip" data-placement="top" title="Estados de Comunicacion" >
+                        data-toggle="tooltip" data-placement="top" title="Estados de Comunicación" >
                         {{ item.idEstado.descripcionEstado }} </span> </a>
                   </td>
                   <!-- <td style="width:20px"><a href="/#" data-toggle="modal" data-target="#t_and_c_m" ><i class="material-icons">pageview</i></a></td> -->
@@ -166,7 +166,9 @@
                                    item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
                                    item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
                                    item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc );"
-                         data-toggle="modal" data-target="#t_and_c_m" ><i class="material-icons">pageview</i> </a>
+                                   data-toggle="modal" data-target="#t_and_c_m" >
+                            <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Ver Detalle de Comunicación" >pageview</i>
+                         </a>
                   </td>
                 </tr>
               <tbody>
@@ -184,6 +186,8 @@
 
             			<div class="modal-body">
                       <form>
+                        <h4>Seguimiento de la Comunicación</h4>
+                        <hr class="colorgraph">
                         <div class="row">
                           <div class="col-md-6 mb-3">
                             <label for="validationDefault01">Nombre de Funcionario Asignado</label>
@@ -194,14 +198,13 @@
                             <input type="text" class="form-control" [(ngModel)]="search2" name="search2" id="search2" placeholder="Buscar" value="">
                           </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row"> -->
                             <!-- fila 2 del Formulario -->
-                        </div>
+                        <!-- </div> -->
                         <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
                     </form>
 
                     <!-- Tabla de Funcionarios disponibles para asignar -->
-                    <h4>Seguimiento</h4>
                     <div class="table table-striped table-bordered" style="height: 300px; overflow: auto">
                       <!-- Loader de Carga de los Datos -->
                       <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:45%; margin-top:10%;" >
@@ -211,12 +214,12 @@
                       <table class="example" class="table table-striped table-bordered" style="font-size:15px" *ngIf="loadTabla2 == true">
                         <thead>
                           <tr>
-                            <th>No. Interno</th>
-                            <th>No. Referencia</th>
-                            <th>Fecha Creacion</th>
-                            <th>Actividad</th>
-                            <th>Descripcion</th>
-                            <th>Estado</th>
+                            <th>Código Interno</th>
+                            <th>Código Referencia</th>
+                            <th>Fecha Creación</th>
+                            <th>Actividad de Comunicación</th>
+                            <th>Descripción de Comunicación</th>
+                            <th>Estado de Comunicación</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -239,6 +242,7 @@
                         </tbody>
                       </table>
                     </div>
+                    <hr class="colorgraph">
             			</div>
 
             		</div><!-- /.modal-content -->
