--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -48,7 +48,7 @@
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-block">
-                  <h3 class="card-title">Seleción de Direccion</h3>
+                  <h3 class="card-title">Seleción de Dirección</h3>
                   <!-- Todas las Opciones -->
                   <!-- <label class="custom-control custom-checkbox">
                     <input type="checkbox" name="chkAllFunc[]" class="custom-control-input">
@@ -148,13 +148,13 @@
                     <label class="custom-control custom-checkbox">
                       <input type="checkbox" name="chkTipoCom" value="{{ idTipoComVerbal }}" class="custom-control-input">
                       <span class="custom-control-indicator"></span>
-                      <span class="custom-control-description">Verbal</span>
+                      <span class="custom-control-description">Reuniones</span>
                     </label>
                     <!-- Reuniones / Video Conferencias -->
                     <label class="custom-control custom-checkbox">
                       <input type="checkbox" name="chkTipoCom" value="{{ idTipoComReunion }}" class="custom-control-input">
                       <span class="custom-control-indicator"></span>
-                      <span class="custom-control-description">Reuniones / Video Conferencias</span>
+                      <span class="custom-control-description">Video Conferencias</span>
                     </label>
                   </li>
                 </ul>
@@ -219,35 +219,42 @@
       </form> <!-- Fin de Formulario de Seleccion de Criterios de Busqueda -->
       </div>
 
-      <hr>
+      <hr class="colorgraph">
 
       <!-- Tabla del Reporte -->
-      <h4 id="editor" >Resumen de la Informacion Solicitada</h4>
+      <h4 id="editor" >Resumen de la Información Solicitada</h4>
       <hr>
-      <table class="table table-striped table-hover table-responsive" cellspacing="0" id="example">
+      <!-- Loader de Carga de los Datos -->
+      <div id="loader-2" *ngIf="loading_tableIn == 'show' " style="margin-left:45%; margin-top:2%; margin-bottom:4%;" >
+        <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" style="width:30%"> -->
+        <img src="assets/images/832.gif" alt="Cargando Tareas">
+      </div>
+      <table class="table table-striped table-hover table-responsive" cellspacing="0" id="example" *ngIf="loading_tableIn == 'hide'">
         <thead>
           <tr>
             <th>Ingreso / Salida</th>
-            <th>Tipo de Comunicacion</th>
-            <!-- <th>Codigo / Comunicacion</th> -->
+            <th>Tipo / Comunicación</th>
+            <th>Código / Comunicación</th>
             <th>Direccion Responsable</th>
             <th>Funcionario Responsable</th>
-            <th>Fecha Ingreso </th>
-            <th>Institucion de Comunicacion</th>
-            <th>Tema de Comunicacion</th>
-            <th>Descripcion de Comunicacion</th>
-            <th>Estado Comunicacion</th>
+            <th>Fecha Creación</th>
+            <th>Fecha Finalizado</th>
+            <th>Institución Remitente</th>
+            <th>Tema / Asunto</th>
+            <th>Descripción / Comunicación</th>
+            <th>Estado</th>
           </tr>
         </thead>
         <tbody id="newTable" >
           <tr *ngFor="let item of JsonOutgetReporteComunicaion">
             <th scope="row">{{ item.idTipoComunicacion.descTipoComunicacion }}</th>
             <th scope="row">{{ item.idTipoDocumento.descTipoDocumento }}</th>
-            <!-- <td>{{ item.codCorrespondenciaEnc }}</td> -->
-            <td>{{ item.idDeptoFuncional.descDeptoFuncional }}</td>
+            <td>{{ item.codCorrespondenciaEnc }}</td>
+            <td>{{ item.idDeptoFuncional.inicialesDeptoFuncional }} | {{ item.idDeptoFuncional.descDeptoFuncional }}</td>
             <td>{{ item.idFuncionarioAsignado.nombre1Funcionario }} - {{ item.idFuncionarioAsignado.apellido1Funcionario }}</td>
             <td>{{ item.fechaIngreso.timestamp | generateDate }}</td>
-            <td>{{ item.idInstitucion.perfilInstitucion }}</td>
+            <td>{{ item.fechaFinalizacion.timestamp | generateDate }}</td>
+            <td>{{ item.idInstitucion.descInstitucion }} | {{ item.idInstitucion.perfilInstitucion }}</td>
             <td>{{ item.temaComunicacion }}</td>
             <td>{{ item.descCorrespondenciaEnc }}</td>
             <td>{{ item.idEstado.descripcionEstado }}</td>
