--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -160,11 +160,11 @@
             <div class="form-group">
               <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci" required
                     ngControl="idDireccionSreci" [(ngModel)]="comunicacion.idDireccionSreci" tabindex="8"  (change)="getlistaSubDireccionesSRECI()" >
-                  <option value="0">Dirección SRECI Responsable </option>
+                  <option value="0">Sub Secretaría Responsable </option>
                   <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
               </select>
-              <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >Debes Seleccionar una Dirección SRECI responsable</small>
-              <small class="form-text text-muted" *ngIf="idDireccionSreci.errors?.required" >Debes Seleccionar una Dirección SRECI responsable</small>
+              <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >Debes Seleccionar una Sub Secretaría responsable</small>
+              <small class="form-text text-muted" *ngIf="idDireccionSreci.errors?.required" >Debes Seleccionar una Sub Secretaría responsable</small>
             </div>
          </div>
 
@@ -173,11 +173,11 @@
            <div class="form-group">
              <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional" required
                    ngControl="idDeptoFuncional" [(ngModel)]="comunicacion.idDeptoFuncional" tabindex="9"  >
-                 <option value="0">Sub Dirección SRECI Responsable</option>
+                 <option value="0">Dirección Responsable</option>
                  <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
              </select>
-             <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Sub Dirección SRECI responsable</small>
-             <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Sub Dirección SRECI responsable</small>
+             <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar una Dirección responsable</small>
+             <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Dirección responsable</small>
            </div>
          </div>
        </div>
@@ -222,10 +222,10 @@
             <div class="form-group">
               <select #idDireccionSreciAcom="ngModel" class="form-control" name="idDireccionSreciAcom" id="idDireccionSreciAcom"
                     ngControl="idDireccionSreciAcom" [(ngModel)]="comunicacion.idDireccionSreciAcom" tabindex="12" (change)="getlistaSubDireccionesSRECIAcom()" >
-                  <option value="0">Dirección SRECI Acompañante </option>
+                  <option value="0">Sub Secretaría Acompañante </option>
                   <option *ngFor="let list of JsonOutgetlistaDireccionSRECIAcom" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
               </select>
-              <small class="form-text text-muted" *ngIf="idDireccionSreciAcom.value == 0 || idDireccionSreciAcom.value == null " >Debes Seleccionar una Dirección SRECI acompañante</small>
+              <small class="form-text text-muted" *ngIf="idDireccionSreciAcom.value == 0 || idDireccionSreciAcom.value == null " >Debes Seleccionar una Sub Secretaría acompañante</small>
             </div>
          </div>
 
@@ -234,10 +234,10 @@
            <div class="form-group">
              <select #idDeptoFuncionalAcom="ngModel" class="form-control" name="idDeptoFuncionalAcom" id="idDeptoFuncionalAcom"
                    ngControl="idDeptoFuncionalAcom" [(ngModel)]="comunicacion.idDeptoFuncionalAcom" tabindex="13"  >
-                 <option value="0">Sub Dirección SRECI Acompañante</option>
+                 <option value="0">Dirección Acompañante</option>
                  <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECIAcom" value="{{ list.idDeptoFuncional }}">{{ list.descDeptoFuncional }}</option>
              </select>
-             <small class="form-text text-muted" *ngIf="idDeptoFuncionalAcom.value == 0 || idDeptoFuncionalAcom.value == null " >Debes Seleccionar una Sub Dirección SRECI acompañante</small>
+             <small class="form-text text-muted" *ngIf="idDeptoFuncionalAcom.value == 0 || idDeptoFuncionalAcom.value == null " >Debes Seleccionar una Dirección acompañante</small>
            </div>
          </div>
 
@@ -249,7 +249,7 @@
       <!-- Datos de las Relaciones de las Tablas -->
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" href="#demo">Informacion Complementaria</a>
+          <a data-toggle="collapse" href="#demo">Información Complementaria</a>
         </h4>
       </div>
 
