--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -26,20 +26,20 @@
 
   <!-- Fila para la tabla Principal de la ventana de finalizar Oficio -->
   <div class="col-xs-12 col-md-12 col-lg-12" *ngIf="loadTabla1 == true">
-    <table id="example" class="table table-striped table-bordered" cellspacing="0"   >
+    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%"   >
         <thead >
             <tr>
-              <th>Estado</th>
-              <th>No.Interno</th>
-              <th>No.Ingresado</th>
-              <th>Institución</th>
-              <th>Tema</th>
-              <th>Fecha Ingreso</th>
-              <th>Fecha Entrega</th>
+              <th>Estado de Comunicación</th>
+              <th>Código Interno</th>
+              <th>Código Ingresado</th>
+              <th>Institución Remitente</th>
+              <th>Tema de Comunicación</th>
+              <th>Fecha Creación</th>
+              <th>Fecha Entrega.</th>
               <th>Accion</th>
             </tr>
         </thead>
-        <tfoot>
+        <!-- <tfoot>
             <tr>
               <th>Estado</th>
               <th>No.Interno</th>
@@ -50,17 +50,18 @@
               <th>Fecha Entrega</th>
               <th>Accion</th>
             </tr>
-        </tfoot>
+        </tfoot> -->
         <tbody >
             <tr *ngFor="let item of JsonOutgetlistaOficiosAll | searchfilter:codCorr:search ">
-              <td [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3, 'text-info' : item.idEstado.idEstado == 8 }" >
+              <td [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3, 'text-info' : item.idEstado.idEstado == 8,
+                              'text-success': item.idEstado.idEstado == 7 }" >
                 <!-- <p class="alert alert-primary"> -->
                   {{ item.idEstado.descripcionEstado }}
                 <!-- </p> -->
               </td>
               <td> {{ item.codCorrespondenciaEnc }} </td>
               <td> {{ item.codReferenciaSreci }} </td>
-              <td> {{ item.idInstitucion.descInstitucion }} </td>
+              <td> {{ item.idInstitucion.descInstitucion }} | {{ item.idInstitucion.perfilInstitucion }} </td>
               <td> {{ item.temaComunicacion }} </td>
                 <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
               <td> {{ item.fechaIngreso.timestamp | generateDate }} </td>
@@ -124,8 +125,8 @@
         <!-- Formulario del Oficio Asignado -->
           <form #finalizarOficioForm="ngForm" (ngSubmit)="onSubmit(finalizarOficioAsignado, 1)" name="finalizarOficioForm" role="form">
             <!-- fila 1 del Formulario -->
-            <h4>Finalizacion de Comunicacion | {{ idCorrepEncModal }}</h4>
-            <hr>
+            <h4>Finalización de Comunicación | {{ idCorrepEncModal }}</h4>
+            <hr class="colorgraph">
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="validationDefault01">Funcionario Asignado</label>
@@ -143,7 +144,7 @@
                         ngControl="descripcionOficio" [(ngModel)]="finalizarOficios.descripcionOficio" required maxlength="1400" minlength="15"
                         class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
                 </textarea>
-                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripcion es obligatoria</small>
+                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripción es obligatoria</small>
                 <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.minlength" >Se nesesita por lo menos {{ descripcionOficio.errors.minlength.requiredLength }} caracteres</small>
               </div>
             </div>
@@ -161,7 +162,7 @@
               <div class="col-md-4 mb-3">
                 <!-- <label for="validationDefault02">Actividad realizada</label> -->
                 <input type="text" class="form-control" [(ngModel)]="finalizarOficios.codOficioRespuesta" name="codOficioRespuesta" id="codOficioRespuesta"
-                    placeholder="Comunicacion de Respuesta" required value="{{ idCorrepEncModal }}" disabled>
+                    placeholder="Comunicación de Respuesta" required value="{{ idCorrepEncModal }}" disabled>
               </div>
             </div>
 
@@ -219,7 +220,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
-            <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+            <h4 class="modal-title" id="myModalLabel">Comunicación No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
             <!-- Loader de Carga de los Datos -->
             <div id="loader-2" *ngIf="loading_table == 'show'" >
               <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
@@ -230,8 +231,8 @@
             <!-- Formulario del Oficio Asignado -->
               <form #finalizarOficioForm="ngForm" (ngSubmit)="onSubmit(creacionOficioAsignado, 2)" name="finalizarOficioForm" role="form">
                 <!-- fila 1 del Formulario -->
-                <h4>Creacion de Comunicacion de Respuesta | {{ idCorrepEncModal }}</h4>
-                <hr>
+                <h4>Creacion de Comunicación de Respuesta | {{ idCorrepEncModal }}</h4>
+                <hr class="colorgraph">
                 <div class="row">
                   <div class="col-md-6 mb-3">
                     <label for="validationDefault01">Funcionario Asignado</label>
@@ -247,9 +248,9 @@
                     <!-- <label for="validationDefault01">Descripción del Oficio</label> -->
                     <textarea #descripcionOficio="ngModel" type="text" name="descripcionOficio" id="descripcionOficio"
                             ngControl="descripcionOficio" [(ngModel)]="finalizarOficios.descripcionOficio" required maxlength="1400" minlength="15"
-                            class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
+                            class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicación" rows="3">
                     </textarea>
-                    <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripcion es obligatoria</small>
+                    <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripción es obligatoria</small>
                     <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.minlength" >Se nesesita por lo menos {{ descripcionOficio.errors.minlength.requiredLength }} caracteres</small>
                     <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.maxlength" >La capacidad maxima para la Descripcion es: 1400 caracteres</small>
                   </div>
@@ -277,7 +278,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
-        <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+        <h4 class="modal-title" id="myModalLabel">Comunicación No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
         <!-- Loader de Carga de los Datos -->
         <div id="loader-2" *ngIf="loading_table == 'show'" >
           <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
@@ -289,7 +290,7 @@
           <form #finalizarOficioForm="ngForm" (ngSubmit)="onSubmit(agregarActividadResp, 3)" name="finalizarOficioForm" role="form">
             <!-- fila 1 del Formulario -->
             <h4>Agregar Actividad a Comunicacion | {{ idCorrepEncModal }}</h4>
-            <hr>
+            <hr class="colorgraph">
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="validationDefault01">Funcionario Asignado</label>
@@ -307,7 +308,7 @@
                         ngControl="descripcionOficio" [(ngModel)]="finalizarOficios.descripcionOficio" required maxlength="1400" minlength="15"
                         class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
                 </textarea>
-                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripcion es obligatoria</small>
+                <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.required" >La Descripción es obligatoria</small>
                 <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.minlength" >Se nesesita por lo menos {{ descripcionOficio.errors.minlength.requiredLength }} caracteres</small>
                 <small class="form-text text-muted" *ngIf="descripcionOficio.errors?.maxlength" >La capacidad maxima para la Descripcion es: 1400 caracteres</small>
               </div>
